@@ -1,5 +1,9 @@
 2012-11-13  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	* mln/histo/equalize.hh: Fix.
+
+2012-11-13  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	* mln/histo/equalize.hh: Revamp.
 
 2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>
